<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <TextView
        android:id="@+id/tv_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dialog_hint"
        android:textSize="18sp"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Button Đồng ý -->
    <Button
        android:id="@+id/btn_accept"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dialog_act_acc"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_confirm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_denied"
        tools:ignore="VisualLintButtonSize" />

    <!-- Button Từ chối -->
    <Button
        android:id="@+id/btn_denied"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dialog_acc_deni"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_confirm"
        app:layout_constraintStart_toEndOf="@id/btn_accept"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>
