<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:foreground="?attr/selectableItemBackground"
            app:strokeWidth="0dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:orientation="horizontal"
                android:padding="16dp"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:importantForAccessibility="no"
                    android:src="@drawable/ic_darkm_mode"
                    app:tint="@android:color/darker_gray"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="16dp"
                    android:text="@string/setting_hint_mode"
                    android:textSize="16sp"
                    tools:ignore="RtlSymmetry" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switchDarkMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <!-- Clear Notes -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardClear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?attr/selectableItemBackground"
            app:strokeWidth="0dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:id="@+id/linearDelete"
                android:importantForAccessibility="no"
                android:orientation="horizontal"
                android:padding="16dp"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:src="@drawable/ic_delete"
                    app:tint="@android:color/darker_gray"
                    tools:ignore="ContentDescription,ImageContrastCheck" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_hint_delete_all"
                    android:textSize="16sp"
                    android:paddingStart="16dp"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/tvAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_hint_about"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:textSize="13sp"/>
    </LinearLayout>

</ScrollView>
